scss/partials/_topic_finances_headline.scss
div.topic-finances-headline {
  @include big_web() {
    height: 75px;
    overflow: hidden;
  }

  div.topic-headline-labels{
    width: 100%;

    div.finances-metric {
      width: 33%;
      float: left;
      text-align: left;
      font-size: 16px;

      &.cash {
        width: 34%;
      }

      div.label {
        color: $oc_gray_3;
        text-align: left;
        padding: 0;
        margin: 0;
      }

      div.value {
        font-size: 24px;
        color: #444444;
        text-align: left;
        padding: 0;
        margin: 0;

        &.cash {
          color: $oc_green_regular;
        }

        &.costs, &.burn-rate {
          color: $oc_red_regular;
        }

        &.cash-flow {
          color: $oc_green_regular;
        }
      }
    }
  }

  div.topic-headline-inner {
    margin-top: 10px;
  }
}

